--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,4 +49,6 @@ dependencies {
     compile 'io.realm:android-adapters:1.3.0' // added this line
     compile 'dk.ilios:realmfieldnameshelper:1.0.0'
     compile 'com.parse.bolts:bolts-tasks:1.4.0'
+
+    // apt 'com.google.guava:guava:19.0' // dagger + databind workaround
 }
